<resources>
    <string name="app_name">ProjectFirst</string>
    <string name="hapiness">Hapiness</string>
    <string name="optimism">Optimism</string>
    <string name="kidness">Kindness</string>
    <string name="giving">Giving  </string>
    <string name="respect">Respect </string>
    <string name="ego">Ego     </string>
    <string name="limit">You can only select 4 items</string>
    <string name="givingText">Sharing knowledge empowers others and fosters growth.</string>
    <string name="hapinessText">Happiness is found in the simple moments of life.</string>
    <string name="kindnessText">Kindness is a language that everyone understands.</string>
    <string name="optimismText">Optimism is the belief that good things are always possible.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_first_ke_kod">ProjectFirstKeKod</string>
</resources>