<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/givingFragment"
        android:title="@string/giving"
        android:icon="@drawable/baseline_not_interested_24" />
    <item
        android:id="@+id/hapinessFragment"
        android:title="@string/hapiness"
        android:icon="@drawable/baseline_not_interested_24" />
    <item
        android:id="@+id/kidnessFragment"
        android:title="@string/kidness"
        android:icon="@drawable/baseline_not_interested_24" />
    <item
        android:id="@+id/optimismFragment"
        android:title="@string/optimism"
        android:icon="@drawable/baseline_not_interested_24" />
    <item
        android:id="@+id/respectFragment"
        android:title="@string/respect"
        android:icon="@drawable/baseline_not_interested_24" />

</menu>