<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/egoBackground"
    tools:context=".screens.EgoFragment">

    <app.rive.runtime.kotlin.RiveAnimationView
        android:id="@+id/secondTorch"
        android:layout_width="231dp"
        android:layout_height="282dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <app.rive.runtime.kotlin.RiveAnimationView
        android:id="@+id/fourthTorch"
        android:layout_width="231dp"
        android:layout_height="282dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <app.rive.runtime.kotlin.RiveAnimationView
        android:id="@+id/firstTorch"
        android:layout_width="231dp"
        android:layout_height="282dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <app.rive.runtime.kotlin.RiveAnimationView
        android:id="@+id/thirdTorch"
        android:layout_width="231dp"
        android:layout_height="282dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/hapinessSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nerko_one"
        android:text="@string/hapiness"
        android:textSize="24sp"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="@+id/kidnessSwitch"
        app:layout_constraintTop_toBottomOf="@+id/kidnessSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/optimismSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/optimism"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:fontFamily="@font/nerko_one"
        app:layout_constraintStart_toStartOf="@+id/hapinessSwitch"
        app:layout_constraintTop_toBottomOf="@+id/hapinessSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/kidnessSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/kidness"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:fontFamily="@font/nerko_one"
        app:layout_constraintStart_toEndOf="@+id/egoSwitch"
        app:layout_constraintTop_toTopOf="@+id/egoSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/givingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/giving"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:fontFamily="@font/nerko_one"
        app:layout_constraintStart_toStartOf="@+id/egoSwitch"
        app:layout_constraintTop_toBottomOf="@+id/egoSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/respectSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nerko_one"
        android:text="@string/respect"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/givingSwitch"

        app:layout_constraintTop_toBottomOf="@+id/givingSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/egoSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="120dp"
        android:text="@string/ego"
        android:fontFamily="@font/nerko_one"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>